# activiti_mediation_template_sql_advisor

./: .env.example  .gitignore  README.md  README_PHASE1.md  pyproject.toml
data/expression_rules/: attribute_value_rulebook.json  attribute_value_runtime_spec.json  dsl_index.pkl  util-dsl-kb.jsonl
data/samples/: golden_agent_samples.md
data/source_documents_archive/: Activiti_Mediation_Master_RAG_Guide_v2.docx  Objective.docx  The Activiti Mediation Expression.docx  Util.java
data/template_registry/: template_registry.yaml
eval/: golden_cases.jsonl  run_eval.py  runtime_spec_compile_cases.jsonl  test_queries.jsonl
mcp_server/src/mediation_oracle_mcp/: config.py  guards.py  oracle_client.py  server.py  test_client.py  tools.py
src/activiti_mediation_template_sql_advisor/: main.py  startup.py  web_app.py
src/activiti_mediation_template_sql_advisor/dsl_compiler/: __init__.py  constants.py  deterministic.py  evaluator.py  helpers.py  node.py  rulebook_llm.py  safety.py
src/activiti_mediation_template_sql_advisor/dsl_rag/: __init__.py  answer.py  classify.py  ingest.py  paths.py  retrieve.py  system_prompt.md  tokenization.py
src/activiti_mediation_template_sql_advisor/dsl_rules/: attribute_value_rulebook.py  attribute_value_runtime_spec.py
src/activiti_mediation_template_sql_advisor/graph/: builder.py  state.py  telemetry.py
src/activiti_mediation_template_sql_advisor/graph/nodes/: dsl_expression.py  expression_compilation.py  final_response.py  oracle_inspection.py  planner.py  rag_retrieval.py  request_planner.py  sql_generation.py  template_resolution.py
src/activiti_mediation_template_sql_advisor/mcp_client/: oracle_mcp_client.py  shared_client.py
src/activiti_mediation_template_sql_advisor/prompts/: mediation_sql_agent_prompt.md
src/activiti_mediation_template_sql_advisor/rag/: ingest.py  retriever.py
src/activiti_mediation_template_sql_advisor/template_registry/: loader.py  resolver.py
tests/: test_advisor_e2e.py  test_dsl_evaluator.py  test_dsl_expression_node.py  test_golden_regression.py  test_graph_routing.py  test_graph_telemetry.py  test_runtime_spec_cases.py  test_startup_optimizations.py  test_template_resolver.py
(+7 files in other folders)
